# opbe

./: CMakeLists.txt  README.md
include/: averagingproblem.h  deltaproblem.h  density.h  fixedicproblem.h  hermitepolynomial.h  integrationcontrol.h  mkproblem.h  modeindex.h  namespace.h  opbeconst.h  opbeenums.h  opbeparameter.h  problem.h  runcontrol.h  system.h
old/: mode.h  mproblem.cpp  mproblem.h  sproblem.cpp  sproblem.h  wavenumber.cpp  wavenumber.h
src/: averagingproblem.cpp  deltaproblem.cpp  density.cpp  fixedicproblem.cpp  gsldriver.cpp  hermitepolynomial.cpp  main.cpp  mkproblem.cpp  modeindex.cpp  opbeparameter.cpp  problem.cpp  runcontrol.cpp  system.cpp
